--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,35 @@
   <meta charset="UTF-8">
   <title>GEOBUZZ/ATMOSCENE APPLICATION BY JESSICA L., WISSAM C, and KEVIN B.</title>
   <!--Adding Styles Sheet and Bootstrap  -->
-  <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
-  <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
 
 </head>
 <!-- ******************************************************** -->
 
 <body>
 
+  <!-- PAGE HEADER -->
+  <div class="container">
+      <h1 class="jumbotron" id="ourtitle">
+      GEOBUZZ or ATMOSCENE
+      </h1>
+  </div>
+<!-- INPUT FORM -->
+  <form id="form">
+          <input type="text" id="search" />
+  </form>
+
+  <div id="instagram">
+  </div>
+
+  <footer>
+  Created by: Jessica Lynn, Wissam Charafeddine, and Kevin Baxter 2016
+
+  </footer>
+
   <!-- Javascript Files linked including jquery -->
-  <script type="text/javascript" src="/js/jquery-1.12.3.min.js"></script>
-  <script type="text/javascript" src="/js/app.js"></script>
+  <script type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
