--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		        <li class="current"><a href="#twitter-tab"><img src='css/img/twitterLogo.png' style='height:50px;margin-left: 10px;' /></a></li>
 		        <li><a href="#instagram-tab"><img src='css/img/instagramLogo.png' style='height:50px;margin-left: 10px;'/></a></li>
 		        <li><a href="#youtube-tab"><img src='css/img/youtubeLogo.png' style='height:50px;margin-left: 10px;'/></a></li>
-		      
+
 		    </ul>
 			<div class="tab">
 
@@ -140,7 +140,9 @@
     <!-- Javascript Files linked including jquery -->
     <script type="text/javascript" src="js/jquery-1.12.3.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script> -->
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgQ1yk9FCN6A-ol9OYr8adGSdcGcrCgto"
+  type="text/javascript"></script>
     <script type="text/javascript" src="js/mapLocation.js"></script>
     <script type="text/javascript" src="js/twitter/twitterApp.js"></script>
     <script type="text/javascript" src="js/instagram/instagramApp.js"></script>
